@@ -14,21 +14,21 @@
 namespace pqxx
 {
 /// Number of rows in a result set.
-using result_size_type = unsigned long;
+using result_size_type = int;
 
 /// Difference between result sizes.
-using result_difference_type = signed long;
+using result_difference_type = int;
 
 /// Number of fields in a row of database data.
-using row_size_type = unsigned int;
+using row_size_type = int;
 
 /// Difference between row sizes.
-using row_difference_type = signed int;
+using row_difference_type = int;
 
 /// Number of bytes in a field of database data.
-using field_size_type = std::size_t;
+using field_size_type = size_t;
 
-/// Number of bytes in a large object.  (Unusual: it's signed.)
+/// Number of bytes in a large object.
 using large_object_size_type = long;
 
 
