@@ -44,15 +44,16 @@ int pqxx::internal::statement_parameters::marshall(
     if (m_nonnull[param])
     {
       values[param] = m_values[arg].c_str();
-      lengths[param] = static_cast<int>(m_values[arg].size());
+      lengths[param] = check_cast<int>(
+	m_values[arg].size(), "statement parameters");
       ++arg;
     }
 
   // The binaries array is simpler: it maps 1-on-1.
   binaries.resize(array_size);
   for (size_t param = 0; param < elements; ++param)
-    binaries[param] = static_cast<int>(m_binary[param]);
+    binaries[param] = check_cast<int>(m_binary[param], "statement parameters");
   binaries.back() = 0;
 
-  return static_cast<int>(elements);
+  return check_cast<int>(elements, "statement parameters");
 }
